test/grammar/schema/type/type_fail_26/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:4:5
  |
4 |     affinity: {str:str} = {
  |     ^ expected {str:str}, got {str(podAntiAffinity):{str(preferredDuringSchedulingIgnoredDuringExecution):[{str(weight) | str(podAffinityTerm):int(100) | {str(labelSelector) | str(topologyKey):{str(matchExpressions):[{str(key) | str(operator) | str(values):str(cluster.k8s/app-name) | str(In) | [str]}]} | str(kubernetes.io/hostname)}}]}}
  |